Fixed spacing issue on character page

--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,22 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
 body{
   font-family: 'Cinzel', serif;
 }
 
-/* .app-wrapper {
-  position: relative;
-  min-height: 100vh;
-  overflow-x: hidden;
+.main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 2rem;
 }
 
-.background{
+.background {
   background-image: url('./images/landscape.webp');
   background-size: cover;
-  width: 100%;
-  height: 100%;
-  background-position: center
+  background-position: center;
+  height: 100vh;
+  overflow: auto;
 }
 
-.main {
-  position: relative;
-  z-index: 1;
-  min-height: 100vh;
-  padding-bottom: 2rem;
-} */
