--- a/src/components/CharacterProfile/CharacterProfile.module.css
+++ b/src/components/CharacterProfile/CharacterProfile.module.css
@@ -11,9 +11,38 @@ li{
     list-style-type: none;
 }
 
+ul{
+    text-align: center;
+    list-style-position: inside;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
 .info{
-    font-weight: bold;
-    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    color: rgb(37, 36, 36);
+    max-width: 23rem;
+    text-align: center;
+    background-color: rgb(245, 243, 241);
+    /* border: solid rgb(56, 53, 53) 5px; */
+    border-radius: 10px;
+    padding: 8px 20px 25px 20px;
    
 }
 
+.character-profile{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 2rem;
+}
+
+/* .name{
+    max-width: 100px;
+    align-items: center;
+    display: flex;
+} */
